2016-04-26 Fixed issue with sending event in Submit module
2016-04-25 Added blocking wrong answers in PlotsLines module
2016-04-25 Fixed issue with non displaying coordinations in PointsLines module
2016-04-25 Added blocking wrong answers in MultipleGap module
2016-04-22 Added blocking wrong answers for editable gaps in Text module
2016-04-22 Fixed tests in Crossword module
2016-04-21 Added Color correct property in Coloring module
2016-04-19 Added blocking wrong answers in Crossword module
2016-04-19 Fixed memory leaks in IWB_Toolbar module and added destroy method to zoom.js
2016-04-19 Added property weight to page
2016-04-18 Added blocking wrong answers in Image Gap module
2016-04-18 Added blocking wrong answers in Connection module
2016-04-14 Added blocking wrong answers in Text Identification module
2016-04-14 Added blocking wrong answers in Text module
2016-04-13 Fixed rendering latex in Text module
2016-04-11 Added sending continuous events and stick steps in Slider module 
2016-04-08 Fixed dragging element in Ordering module
2016-04-08 Added french layout to Paragraph
2016-04-08 Added list and combo views in Table of Contents module
2016-04-07 Added exporting report to file in Print Report module
2016-04-07 Added Reset, CheckAnswers and ShowAnswers to Keyboard Navigation
2016-04-07 Added method getModulesAsJS to player's API
2016-04-06 Fixed tests in Table module
2016-04-06 Fixed issue with inserting Image_Viewer module
2016-04-06 Fixed issue with changing gap width in editor in Table module
2016-04-05 Fixed issue with showing module when lesson is in iframe in Glossary module
2016-04-04 Fixed issue with appearing native keyboard in eKeyboard module on Android
2016-03-30 Fixed issue with droppable gaps in Text module
2016-03-24 Added new module Variable Storage
2016-03-21 Fixed scrolling and text wrapping on iOS in Paragraph module
2016-03-18 Added displaying current date in Print Report module